--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="search" href="/tabs/search">
+      <ion-icon name="search-outline"></ion-icon>
+      <ion-label>Search</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="history" href="/tabs/history">
+      <ion-icon name="albums-outline"></ion-icon>
+      <ion-label>History</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="favorites" href="/tabs/favorites">
+      <ion-icon name="heart-outline"></ion-icon>
+      <ion-label>Favorites</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
