movie search results display, add popular movies section and 3 buttons

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,14 +6,14 @@
       <ion-label>Search</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="history" href="/tabs/history">
+    <ion-tab-button tab="details" href="/tabs/details">
       <ion-icon name="albums-outline"></ion-icon>
-      <ion-label>History</ion-label>
+      <ion-label>Details</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="favorites" href="/tabs/favorites">
+    <ion-tab-button tab="list" href="/tabs/list">
       <ion-icon name="heart-outline"></ion-icon>
-      <ion-label>Favorites</ion-label>
+      <ion-label>My list</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
