--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,15 +15,52 @@
 
   <ion-searchbar [(ngModel)]="query" (ionInput)="findMovies()"></ion-searchbar>
 
-  <ion-list>
+  <ion-list *ngIf="movies.length > 0">
     <ion-item *ngFor="let movie of movies">
       <ion-avatar slot="start">
         <img [src]="movie.Poster" />
       </ion-avatar>
       <ion-label>
         <h2>{{ movie.Title }}</h2>
-        <p>{{ movie.Year }}</p>
+        <p>Year: {{ movie.Year }}</p>
+        <p>Genre: {{movie.Genre}}</p>
+        <p>Rating: {{ movie.imdbRating }}/10</p>
+      </ion-label>
+      <ion-button slot="end" (click)="viewDetails(movie)">Detail</ion-button>
+      <ion-button slot="end" (click)="addToAlreadySeen(movie)">Already Seen</ion-button>
+      <ion-button slot="end" (click)="addToWatchLater(movie)">Watch Later</ion-button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list *ngIf="movies.length === 0 && query.length > 2 && !loading">
+    <ion-item>
+      <ion-label>
+        <h2>No results found</h2>
       </ion-label>
     </ion-item>
   </ion-list>
+
+  <ion-list *ngIf="query.length <= 2 && popularMovies.length > 0">
+    <ion-item>
+      <ion-label>
+        <h2>Popular Movies</h2>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngFor="let movie of popularMovies">
+      <ion-avatar slot="start">
+        <img [src]="movie.Poster" />
+      </ion-avatar>
+      <ion-label>
+        <h2>{{ movie.Title }}</h2>
+        <p>Year: {{ movie.Year }}</p>
+        <p>Genre: {{movie.Genre}}</p>
+        <p>Rating: {{ movie.imdbRating }}/10</p>
+      </ion-label>
+      <ion-button slot="end" (click)="viewDetails(movie)">Detail</ion-button>
+      <ion-button slot="end" (click)="addToAlreadySeen(movie)">Already Seen</ion-button>
+      <ion-button slot="end" (click)="addToWatchLater(movie)">Watch Later</ion-button>
+    </ion-item>
+  </ion-list>
+
+  <ion-spinner *ngIf="loading" name="crescent"></ion-spinner>
 </ion-content>
