--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      My Movies
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,47 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">My Movies</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-list>
+    <ion-item>
+      <ion-label>
+        <h2>Already Seen</h2>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngFor="let movie of alreadySeen">
+      <ion-avatar slot="start">
+        <img [src]="movie.Poster" />
+      </ion-avatar>
+      <ion-label>
+        <h2>{{ movie.Title }}</h2>
+        <p>Year: {{ movie.Year }}</p>
+        <p>Genre: {{movie.Genre}}</p>
+        <p>Rating: {{ movie.imdbRating }}/10</p>
+      </ion-label>
+      <ion-button slot="end" (click)="removeFromAlreadySeen(movie)">Remove</ion-button>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-label>
+        <h2>Watch Later</h2>
+      </ion-label>
+    </ion-item>
+    <ion-item *ngFor="let movie of watchLater">
+      <ion-avatar slot="start">
+        <img [src]="movie.Poster" />
+      </ion-avatar>
+      <ion-label>
+        <h2>{{ movie.Title }}</h2>
+        <p>Year: {{ movie.Year }}</p>
+        <p>Genre: {{movie.Genre}}</p>
+        <p>Rating: {{ movie.imdbRating }}/10</p>
+      </ion-label>
+      <ion-button slot="end" (click)="removeFromWatchLater(movie)">Remove</ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
