--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,87 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+  <ion-toolbar color="secondary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/search"></ion-back-button>
+    </ion-buttons>
+    <ion-title color="primary">Movie Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <div *ngIf="loading" class="ion-text-center">
+    <ion-spinner name="crescent"></ion-spinner>
+  </div>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <div *ngIf="error" class="ion-text-center">
+    <ion-text color="danger">
+      <h2>Error loading movie details</h2>
+    </ion-text>
+  </div>
+
+  <div *ngIf="movieDetail && !loading" class="movie-detail">
+    <ion-card>
+      <div class="poster-container">
+        <img [src]="movieDetail.Poster" [alt]="movieDetail.Title"/>
+        <div class="rating-badge">
+          <ion-badge color="warning">
+            <ion-icon name="star"></ion-icon>
+            {{ movieDetail.imdbRating }}/10
+          </ion-badge>
+        </div>
+      </div>
+      
+      <ion-card-header>
+        <ion-card-title class="ion-text-center">{{ movieDetail.Title }}</ion-card-title>
+        <ion-card-subtitle class="ion-text-center">
+          <ion-chip outline color="primary">{{ movieDetail.Year }}</ion-chip>
+          <ion-chip outline color="primary">{{ movieDetail.Runtime }}</ion-chip>
+          <ion-chip outline color="primary">{{ movieDetail.Rated }}</ion-chip>
+        </ion-card-subtitle>
+      </ion-card-header>
+
+      <ion-card-content>
+        <ion-list lines="none">
+          <ion-item>
+            <ion-icon name="film-outline" slot="start" color="primary"></ion-icon>
+            <ion-label>
+              <h2 class="section-title">Genre</h2>
+              <p>{{ movieDetail.Genre }}</p>
+            </ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-icon name="document-text-outline" slot="start" color="primary"></ion-icon>
+            <ion-label class="ion-text-wrap">
+              <h2 class="section-title">Plot</h2>
+              <p>{{ movieDetail.Plot }}</p>
+            </ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-icon name="people-outline" slot="start" color="primary"></ion-icon>
+            <ion-label>
+              <h2 class="section-title">Director</h2>
+              <p>{{ movieDetail.Director }}</p>
+            </ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-icon name="person-outline" slot="start" color="primary"></ion-icon>
+            <ion-label class="ion-text-wrap">
+              <h2 class="section-title">Cast</h2>
+              <p>{{ movieDetail.Actors }}</p>
+            </ion-label>
+          </ion-item>
+
+          <ion-item *ngIf="movieDetail.Awards !== 'N/A'">
+            <ion-icon name="trophy-outline" slot="start" color="warning"></ion-icon>
+            <ion-label class="ion-text-wrap">
+              <h2 class="section-title">Awards</h2>
+              <p>{{ movieDetail.Awards }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
