--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,19 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+:root {
+    --ion-color-primary: #ff6b00;
+    --ion-color-primary-rgb: 255,107,0;
+    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast-rgb: 0,0,0;
+    --ion-color-primary-shade: #e05e00;
+    --ion-color-primary-tint: #ff7a1a;
+  
+    --ion-color-secondary: #000000;
+    --ion-color-secondary-rgb: 0,0,0;
+    --ion-color-secondary-contrast: #ffffff;
+    --ion-color-secondary-contrast-rgb: 255,255,255;
+    --ion-color-secondary-shade: #000000;
+    --ion-color-secondary-tint: #1a1a1a;
+  }
